--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "react-reveal": "^1.2.2",
     "react-router-dom": "^4.3.1",
     "react-slick": "^0.23.2",
+    "react-sticky-el": "^1.0.20",
     "redux": "^4.0.1",
     "resolve": "1.10.0",
     "sass-loader": "7.1.0",
